<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="1%p"
    android:keyHeight="@dimen/key_height"
    android:keyWidth="9.1%p"
    android:verticalGap="1%p" >
    <Row
        android:rowEdgeFlags="top"
        android:horizontalGap="1%p"
        android:keyHeight="@dimen/key_for_digit"
        android:keyWidth="18.8%p">
        <Key android:codes="-3"
            android:keyIcon="@drawable/sym_keyboard_done"
            android:keyEdgeFlags="left"/>
        <Key
            android:codes="-999"
            android:keyIcon="@drawable/e056"/>
        <Key
            android:codes="-301"
            android:isModifier="true"
            android:isSticky="true"
            android:keyLabel="@string/hindi"/>
        <Key
            android:codes="-17"
            android:keyIcon="@drawable/themes_png"/>
        <Key
            android:codes="-16"
            android:isModifier="true"
            android:isSticky="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/settings_png"/>
    </Row>
    <Row
        android:keyHeight="@dimen/key_for_digit">
        <Key android:codes="49" android:keyLabel="1" android:keyWidth="9%p" android:keyEdgeFlags="left" />
        <Key android:codes="50" android:keyLabel="2" android:keyWidth="9%p" />
        <Key android:codes="51" android:keyLabel="3" android:keyWidth="9%p" />
        <Key android:codes="52" android:keyLabel="4" android:keyWidth="9%p" />
        <Key android:codes="53" android:keyLabel="5" android:keyWidth="9%p" />
        <Key android:codes="54" android:keyLabel="6" android:keyWidth="9%p" />
        <Key android:codes="55" android:keyLabel="7" android:keyWidth="9%p" />
        <Key android:codes="56" android:keyLabel="8" android:keyWidth="9%p" />
        <Key android:codes="57" android:keyLabel="9" android:keyWidth="9%p" />
        <Key android:codes="48" android:keyLabel="0" android:keyWidth="9%p" android:keyEdgeFlags="right"/>
    </Row>
    <Row>
        <Key android:codes="81" android:keyLabel="Q" android:keyWidth="9%p" android:popupCharacters="1" android:keyEdgeFlags="left"/>
        <Key android:codes="87" android:keyLabel="W" android:keyWidth="9%p" android:popupCharacters="2" />
        <Key android:codes="69" android:keyLabel="E" android:keyWidth="9%p" android:popupCharacters="3" />
        <Key android:codes="82" android:keyLabel="R" android:keyWidth="9%p" android:popupCharacters="4" />
        <Key android:codes="84" android:keyLabel="T" android:keyWidth="9%p" android:popupCharacters="5" />
        <Key android:codes="89" android:keyLabel="Y" android:keyWidth="9%p" android:popupCharacters="6" />
        <Key android:codes="85" android:keyLabel="U" android:keyWidth="9%p" android:popupCharacters="7" />
        <Key android:codes="73" android:keyLabel="I" android:keyWidth="9%p" android:popupCharacters="8" />
        <Key android:codes="79" android:keyLabel="O" android:keyWidth="9%p" android:popupCharacters="9" />
        <Key android:codes="80" android:keyLabel="P" android:keyWidth="9%p" android:popupCharacters="0" android:keyEdgeFlags="right"/>
    </Row>
    <Row>
        <Key android:codes="65" android:keyWidth="9%p" android:keyLabel="A"  android:horizontalGap="5%p" android:keyEdgeFlags="left"/>
        <Key android:codes="83" android:keyWidth="9%p" android:keyLabel="S" />
        <Key android:codes="68" android:keyWidth="9%p" android:keyLabel="D" />
        <Key android:codes="70" android:keyWidth="9%p" android:keyLabel="F" />
        <Key android:codes="71" android:keyWidth="9%p" android:keyLabel="G" />
        <Key android:codes="72" android:keyWidth="9%p" android:keyLabel="H" />
        <Key android:codes="74" android:keyWidth="9%p" android:keyLabel="J" />
        <Key android:codes="75" android:keyWidth="9%p" android:keyLabel="K" />
        <Key android:codes="76" android:keyWidth="9%p" android:keyLabel="L" android:keyEdgeFlags="right"/>
    </Row>
    <Row>
        <Key
            android:codes="-11"
            android:isModifier="true"
            android:isSticky="true"
            android:keyEdgeFlags="left"
            android:keyIcon="@drawable/ic_shift"
            android:keyWidth="13.5%p" />
        <Key android:codes="90" android:keyWidth="9%p" android:keyLabel="Z" />
        <Key android:codes="88" android:keyWidth="9%p" android:keyLabel="X" />
        <Key android:codes="67" android:keyWidth="9%p" android:keyLabel="C" />
        <Key android:codes="86" android:keyWidth="9%p" android:keyLabel="V" />
        <Key android:codes="66" android:keyWidth="9%p" android:keyLabel="B" />
        <Key android:codes="78" android:keyWidth="9%p" android:keyLabel="N" />
        <Key android:codes="77" android:keyWidth="9%p" android:keyLabel="M" />
        <Key
            android:codes="-5"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/delete"
            android:keyWidth="13.5%p" />
    </Row>
    <Row android:rowEdgeFlags="bottom" >
        <Key
            android:codes="-200"
            android:horizontalGap="1%p"
            android:keyEdgeFlags="left"
            android:keyWidth="14%p"
            android:keyLabel="@string/label_eng"
          />
   <!--     android:keyIcon="@drawable/sys_button"-->
        <Key
            android:codes="-14"
            android:keyWidth="12%p"
            android:keyLabel="@string/urdu_ime" />
        <Key
            android:codes="32"
            android:keyIcon="@drawable/space"
            android:keyWidth="42%p" />
        <Key
            android:codes="46"
            android:keyLabel="."
            android:keyWidth="12%p"
            android:popupKeyboard="@xml/popup_punctuation" />
        <Key
            android:codes="10"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/next"
            android:keyWidth="14%p" />
    </Row>

</Keyboard>